# Kronos-Engine

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kronos Engine.sln  Kronos Engine.vcxproj  Kronos Engine.vcxproj.filters  KronosEngine  LICENSE.txt  README.md  SConstruct  Setup.sh  doxygen-config  imgui.ini  makefile  meson.build  text.txt
Dep/: SConstruct
Dep/glad/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  vulkansc.h  wgl.h
Dep/glad/src/: vulkan.c  vulkansc.c
Header/: App.h  Camera.h  Canvas.h  Export.h  FileHandler.h  Framebuffer.h  GeomGenerator.h  Gizmo.h  Import.h  InputHandler.h  InputManager.h  KronosEngine.h  Log.h  MacroUtils.h  Math.h  Mesh.h  Model.h  Object.h  Primitives.h  Renderer.h  Shader.h  ShapePrimitives.h  Standard.h  Texture.h  Utils.h  Vector.h  Vertex.h  Window.h
Resource/Object/Cube/: Cube.mtl
Resource/Shader/: Light.fs  Light.vs  LightColorCube.fs  LightColorCube.vs  Shader.fs  Shader.vs  Solid.fs  Stencil.fs
Source/: App.cpp  Camera.cpp  Canvas.cpp  Export.cpp  FileHandler.cpp  Framebuffer.cpp  GeomGenerator.cpp  Gizmo.cpp  Import.cpp  InputHandler.cpp  InputManager.cpp  KronosEngine.cpp  Log.cpp  Mesh.cpp  Model.cpp  Object.cpp  Renderer.cpp  SConstruct  Shader.cpp  Standard.cpp  Texture.cpp  Vector.cpp  Vertex.cpp  Window.cpp
